--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ryefimchuk/promise-each",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "homepage": "https://github.com/ryefimchuk/promise-each",
@@ -26,5 +26,8 @@
   "devDependencies": {
     "typescript": "^2.9.1"
   },
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@ryefimchuk/promise-lazy-each": "^1.0.0"
+  }
 }
